// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`main > com tabela 1`] = `
<body>
  

  <input
    checked=""
    name="local"
    type="radio"
    value="1"
  />
  

  <form
    name="formulario"
  />
  <table>
    <tbody>
      <tr>
        <td>
          <br />
        </td>
        <td>
          
nonononon
          <br />
          
nonononon
          <br />
          
Sigla: ABC00
           [ 
          <a
            href="https://intra.trf4.jus.br/membros/abc00trf4-jus-br"
            target="_blank"
          >
            Abrir na Intra
          </a>
           ]
          <br />
          
nonononon
          <br />
          
nonononon
          <br />
          
Sigla: bcd00 (antiga: bcd)
           [ 
          <a
            href="https://intra.trf4.jus.br/membros/bcd00trf4-jus-br"
            target="_blank"
          >
            Abrir na Intra
          </a>
           ]
          <br />
          
nonononon
          <br />
          
nonononon
          <br />
        </td>
      </tr>
    </tbody>
  </table>
  

  

</body>
`;

exports[`main > com tabela vazia 1`] = `
<body>
  

  <input
    checked=""
    name="local"
    type="radio"
    value="1"
  />
  

  <form
    name="formulario"
  />
  <table>
    <tbody>
      <tr>
        <td>
          <br />
        </td>
      </tr>
    </tbody>
  </table>
  

  

</body>
`;

exports[`main > dois nomes 1`] = `
<body>
  

  <input
    checked=""
    name="local"
    type="radio"
    value="1"
  />
  

  <form
    name="formulario"
  />
  <br />
  
nonononon
  <br />
  
nonononon
  <br />
  
Sigla: ABC00
   [ 
  <a
    href="https://intra.trf4.jus.br/membros/abc00trf4-jus-br"
    target="_blank"
  >
    Abrir na Intra
  </a>
   ]
  <br />
  
nonononon
  <br />
  
nonononon
  <br />
  
Sigla: bcd00 (antiga: bcd)
   [ 
  <a
    href="https://intra.trf4.jus.br/membros/bcd00trf4-jus-br"
    target="_blank"
  >
    Abrir na Intra
  </a>
   ]
  <br />
  
nonononon
  <br />
  
nonononon
  <br />
  

  

</body>
`;

exports[`main > dominios > JFPR 1`] = `
<body>
  

  <input
    checked=""
    name="local"
    type="radio"
    value="4"
  />
  

  <form
    name="formulario"
  />
  <table>
    <tbody>
      <tr>
        <td>
          <br />
        </td>
        <td>
          
nonononon
          <br />
          
nonononon
          <br />
          
Sigla: ABC00
           [ 
          <a
            href="https://intra.trf4.jus.br/membros/abc00jfpr-jus-br"
            target="_blank"
          >
            Abrir na Intra
          </a>
           ]
          <br />
          
nonononon
          <br />
          
nonononon
          <br />
          
Sigla: bcd00 (antiga: bcd)
           [ 
          <a
            href="https://intra.trf4.jus.br/membros/bcd00jfpr-jus-br"
            target="_blank"
          >
            Abrir na Intra
          </a>
           ]
          <br />
          
nonononon
          <br />
          
nonononon
          <br />
        </td>
      </tr>
    </tbody>
  </table>
  

  

</body>
`;

exports[`main > dominios > JFRS 1`] = `
<body>
  

  <input
    checked=""
    name="local"
    type="radio"
    value="2"
  />
  

  <form
    name="formulario"
  />
  <table>
    <tbody>
      <tr>
        <td>
          <br />
        </td>
        <td>
          
nonononon
          <br />
          
nonononon
          <br />
          
Sigla: ABC00
           [ 
          <a
            href="https://intra.trf4.jus.br/membros/abc00jfrs-jus-br"
            target="_blank"
          >
            Abrir na Intra
          </a>
           ]
          <br />
          
nonononon
          <br />
          
nonononon
          <br />
          
Sigla: bcd00 (antiga: bcd)
           [ 
          <a
            href="https://intra.trf4.jus.br/membros/bcd00jfrs-jus-br"
            target="_blank"
          >
            Abrir na Intra
          </a>
           ]
          <br />
          
nonononon
          <br />
          
nonononon
          <br />
        </td>
      </tr>
    </tbody>
  </table>
  

  

</body>
`;

exports[`main > dominios > JFSC 1`] = `
<body>
  

  <input
    checked=""
    name="local"
    type="radio"
    value="3"
  />
  

  <form
    name="formulario"
  />
  <table>
    <tbody>
      <tr>
        <td>
          <br />
        </td>
        <td>
          
nonononon
          <br />
          
nonononon
          <br />
          
Sigla: ABC00
           [ 
          <a
            href="https://intra.trf4.jus.br/membros/abc00jfsc-jus-br"
            target="_blank"
          >
            Abrir na Intra
          </a>
           ]
          <br />
          
nonononon
          <br />
          
nonononon
          <br />
          
Sigla: bcd00 (antiga: bcd)
           [ 
          <a
            href="https://intra.trf4.jus.br/membros/bcd00jfsc-jus-br"
            target="_blank"
          >
            Abrir na Intra
          </a>
           ]
          <br />
          
nonononon
          <br />
          
nonononon
          <br />
        </td>
      </tr>
    </tbody>
  </table>
  

  

</body>
`;

exports[`main > um nome 1`] = `
<body>
  

  <input
    checked=""
    name="local"
    type="radio"
    value="1"
  />
  

  <form
    name="formulario"
  />
  <br />
  nonononon
  <br />
  nonononon
  <br />
  Sigla: ABC00
   [ 
  <a
    href="https://intra.trf4.jus.br/membros/abc00trf4-jus-br"
    target="_blank"
  >
    Abrir na Intra
  </a>
   ]
  <br />
  nonononon
  <br />
  nonononon
  <br />
  

</body>
`;
